# pdf_read

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  lefthook.yml  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  auth.py  converter.py  email.py  models.py  pdf_processor.py  routes.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: AuthModal.tsx  CompletedPanel.tsx  FailedPanel.tsx  HistoryList.tsx  PlayerBar.tsx  ProcessingPanel.tsx  UploadPanel.tsx
frontend/src/context/: PlayerContext.tsx
k8s/: clusterissuer.yaml  config.yaml  configmap.yaml  cronjob-cleanup.yaml  flask.yaml  ingress.yaml  mysql.yaml  namespace.yaml  pv.yaml  pvc.yaml  rbac.yaml  secret.yaml  secrets-setup.md  web.yaml  worker-config.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_users.py  0003_add_password_reset_codes.py  0004_add_progress_columns.py
service/: Dockerfile  biome.json  drizzle.config.ts  package-lock.json  package.json
service/actions/: auth.ts  jobs.ts
service/app/: layout.tsx  page.tsx
service/app/(app)/: AppClient.tsx  AppShell.tsx  layout.tsx  page.tsx  types.ts
service/server/db/: client.ts  migrate.ts  schema.ts
service/server/models/: Job.ts  PasswordResetCode.ts  PendingRegistration.ts  User.ts
static/js/: app.js
templates/: app.html  lp.html
worker/: Dockerfile  converter.py  db.py  main.py  pdf_processor.py  pyproject.toml
(+14 files in other folders)
