[project]
name = "pdf-to-mp3"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=42.0",
    "itsdangerous>=2.1",
    "requests>=2.31",
    "pdfplumber>=0.11",
    "pypdf2>=3.0",
    "pydub>=0.25",
    "gunicorn>=22.0",
    "voicevox_core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.2/voicevox_core-0.16.2-cp310-abi3-manylinux_2_34_x86_64.whl",
]

[tool.uv]
package = false
