[project]
name = "pdf-to-mp3-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pymysql>=1.1",
    "pdfplumber>=0.11",
    "pydub>=0.25",
    "voicevox_core @ https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.2/voicevox_core-0.16.2-cp310-abi3-manylinux_2_34_x86_64.whl",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "lefthook>=1.11",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
